fixed sudden clipping issue

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 9;
 }
 
 .header {
